# MFP

./: .gitignore  BUILD_JOURNAL.md  CHANGELOG.md  HARDENING_SUMMARY.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASE.md  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml  test.yml
design/: abstract.md  agent-lifecycle.md  federation.md  runtime-interface.md  spec.md  threat-model.md
docs/: api-reference.md  architecture.md  contributing.md  production-guide.md  quickstart.md  security.md  server-guide.md
mfp/: __init__.py  __main__.py  server.py
mfp/agent/: __init__.py  identity.py  lifecycle.py  tools.py
mfp/config/: __init__.py  validator.py
mfp/core/: __init__.py  encoding.py  frame.py  merkle.py  primitives.py  ratchet.py  types.py  validation.py
mfp/federation/: __init__.py  bilateral.py  recovery.py  rotation.py  transport.py  wire.py
mfp/observability/: __init__.py  circuit_breaker.py  health.py  http_server.py  logging.py  metrics.py  timeout.py
mfp/runtime/: __init__.py  channels.py  deduplication.py  pipeline.py  quarantine.py  runtime.py
mfp/storage/: __init__.py  crypto.py  engine.py  schema.py
tests/benchmark/: test_frame_cache_benchmark.py
tests/e2e/: test_agent_e2e.py  test_federation_e2e.py  test_production_hardening_e2e.py  test_runtime_e2e.py  test_single_runtime.py  test_storage_e2e.py
tests/integration/: test_agent_integration.py  test_agent_timeout.py  test_core_pipeline.py  test_deduplication_integration.py  test_federation_integration.py  test_http_metrics_endpoint.py  test_merkle_integration.py  test_metrics_integration.py  (+5 more)
(+31 files in other folders)
